# TokenKill

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  PROVIDER_FORMATS.md
examples/: claude_code_setup.md  cursor_setup.md
src/tokenkill/: __main__.py  budget.py  cli.py  config.py  db.py  loop_detector.py  models.py  proxy.py  tracker.py
src/tokenkill/dashboard/: app.py  routes.py
src/tokenkill/dashboard/static/: index.html
src/tokenkill/providers/: __init__.py  anthropic.py  base.py  google.py  ollama.py  openai.py
tests/: conftest.py  test_budget.py  test_dashboard.py  test_loop_detector.py  test_proxy.py  test_tracker.py
tests/test_providers/: test_anthropic.py  test_google.py  test_openai.py
